# applied-statistics-infrastructure-analytics

./: .gitignore  README.md  pyproject.toml
docs/00_lessons/: 00_lesson_00_pdf_cdf.md
docs/00_overview/: problem_statement.md
docs/01_architecture/: 00_structure.md
notebooks/00_pdf_cdf/: lesson_00.ipynb
notebooks/lesson_00/: 01_load_data.ipynb  lesson_00.ipynb
src/applied_infrastructure_analytics/: main.py
src/applied_infrastructure_analytics/io/: loaders.py  utils.py
src/lesson_00/: functions.py
